syntax = "proto3";

package api.users.v1.user;
import "google/api/annotations.proto";
import "api/core/v1/core.proto";
import "validate/validate.proto";
option go_package = "github.com/realotz/mstore/api/user/v1;userV1";

// 用户相关
service UserService {
  // 查询用户列表
  rpc ListUser(ListUserReq)returns(UserListReply){
    option (google.api.http) = {
      get: "/api/v1/user",
    };
  };
  // 查询用户详情
  rpc GetUser(core.v1.Id)returns(core.v1.User){
    option (google.api.http) = {
      get: "/api/v1/user/{id}",
    };
  };
  // 删除用户
  rpc DelUser(core.v1.Ids)returns(core.v1.Empty){
    option (google.api.http) = {
      delete: "/api/v1/user",
    };
  };
  // 创建用户
  rpc CreateUser(CreateUserReq)returns(core.v1.User){
    option (google.api.http) = {
      post: "/api/v1/user",
      body: "*"
    };
  };
  // 更新用户信息
  rpc UpdateUser(UpdateUserReq)returns(core.v1.User){
    option (google.api.http) = {
      put: "/api/v1/user/{id}",
      body: "*"
    };
  };
}

// 用户筛选条件
message ListUserReq{
  string keyword = 1;
  string role = 2;
  // 公用列表查询条件
  core.v1.ListOption option = 99;
}

// 用户列表
message UserListReply{
  repeated core.v1.User list = 1;
  int64 total = 2;
}

// 创建用户请求
message CreateUserReq{
  //账号
  string account=1;
  // 名称
  string name = 2;
  // 密码
  string password = 3;
  // 角色
  string role = 4;
  // 手机号（可选）
  string phone = 5;
  // 邮箱（可选）
  string email=6;
}

// 更新用户请求
message UpdateUserReq{
  uint32 id = 1;
  // 名称
  string name = 2;
  // 手机号
  string phone = 5;
  // 邮箱
  string email=6;
}